[Issue#9] Travis-CI with Notion

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
     frontend:
         build:
-            context: ./frontend
+            context: .
             dockerfile: ./frontend/Dockerfile.dev
         ports:
             - "3000:3000"
