--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 matrix:
     include:
         - language: node_js
-          code_js: '12'
+          node_js: '12'
           cache:
               - yarn: true
           before_install:
               - cd frontend
+          branches:
+              only:
+                  - addDocker
+          notifications:
+              - 
           install:
               - yarn install
           script:
@@ -18,9 +23,15 @@ matrix:
               - pip: true
           before_install:
               - cd backend
+          branches:
+              only:
+                  - addDocker
           install:
               - pip install -r requirements.txt
           script:
               - pylint **/*.py --load-plugins pylint_django
               - coverage run --source='.' manage.py test
               - coverage xml
+
+notifications:
+    slack: shallwegame:El1u9YYh60IUQsdgDHHSzpQ7
