--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.8.0",
     "axios": "^0.21.0",
     "connected-react-router": "^6.8.0",
     "discord-oauth2": "^2.5.0",
