--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.0",
     "connected-react-router": "^6.8.0",
     "discord-oauth2": "^2.5.0",
+    "eslint": "^7.13.0",
     "express": "^4.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
