--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,6 +17,7 @@ mypy-extensions==0.4.3
 pathspec==0.8.0
 Pillow==8.0.1
 pylint==2.6.0
+pylint-django==2.3.0
 pytz==2020.1
 regex==2020.10.28
 requests==2.24.0
