--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,4 @@ matrix:
         - pip install -r requirements.txt
       script:
         - python manage.py migrate --run-syncdb
+        - pylint **/*.py --load-plugins pylint-django
