--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ matrix:
         - pip install -r requirements.txt
       script:
         - python manage.py migrate --run-syncdb
-        - pylint **/*.py --disable='tests' --load-plugins pylint_django
+        - pylint **/*.py --disable='shallWeGame.tests' --load-plugins pylint_django
