--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,11 @@
     "axios": "^0.21.0",
     "connected-react-router": "^6.8.0",
     "discord-oauth2": "^2.5.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^7.13.0",
     "express": "^4.17.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
     "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
