--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.0",
     "connected-react-router": "^6.8.0",
     "discord-oauth2": "^2.5.0",
+    "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^7.13.0",
     "express": "^4.17.1",
