--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,28 +4,32 @@
   "private": true,
   "dependencies": {
     "@egjs/react-infinitegrid": "^3.0.6",
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.8.0",
-    "axios": "^0.21.0",
+    "axios": "^0.20.0",
     "connected-react-router": "^6.8.0",
+    "coverage": "^0.4.1",
     "discord-oauth2": "^2.5.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
-    "eslint": "^7.13.0",
+    "eslint": "^6.6.0",
     "express": "^4.17.1",
+    "jest-when": "^2.7.2",
+    "json-server": "^0.16.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-infinite-scroller": "^1.2.4",
-    "react-redux": "^7.2.2",
+    "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reqwest": "^2.0.5",
     "styled-components": "^5.2.1",
+    "testing-library": "^0.0.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -36,8 +40,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -51,6 +54,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!src/index.js",
+      "!src/serviceWorker.js"
+    ]
+  },
+  "devDependencies": {
+    "enzyme-to-json": "^3.6.1"
   },
   "proxy": "http://localhost:8000"
 }
