--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,9 @@
     "connected-react-router": "^6.8.0",
     "coverage": "^0.4.1",
     "discord-oauth2": "^2.5.0",
+    "discord.js": "^12.5.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
-    "eslint": "^6.6.0",
-    "discord.js": "^12.5.0",
     "express": "^4.17.1",
     "jest-when": "^2.7.2",
     "json-server": "^0.16.1",
@@ -68,5 +67,5 @@
   "devDependencies": {
     "enzyme-to-json": "^3.6.1"
   },
-  "proxy": "http://ec2-54-159-28-15.compute-1.amazonaws.com:8000"
+  "proxy": "http://3.239.81.119:8000"
 }
