--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,10 @@
     "connected-react-router": "^6.8.0",
     "coverage": "^0.4.1",
     "discord-oauth2": "^2.5.0",
+    "discord.js": "^12.5.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^6.6.0",
-    "discord.js": "^12.5.0",
     "express": "^4.17.1",
     "jest-when": "^2.7.2",
     "json-server": "^0.16.1",
@@ -26,6 +26,7 @@
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.4.3",
     "react-virtualized": "^9.22.2",
     "redux": "^4.0.5",
