--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,5 +69,5 @@
   "devDependencies": {
     "enzyme-to-json": "^3.6.1"
   },
-  "proxy": "http://3.239.81.119:8000"
+  "proxy": "http://localhost:8000"
 }
