--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,3 +28,8 @@ typed-ast==1.4.1
 typing-extensions==3.7.4.3
 urllib3==1.25.11
 wrapt==1.12.1
+kss==1.3.1
+Cython==0.29.21
+gensim==3.8.3
+pandas==1.1.4
+
