--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,30 +1,41 @@
 appdirs==1.4.4
 asgiref==3.2.10
 astroid==2.4.2
+autopep8==1.5.4
 black==20.8b1
+boto3==1.16.26
+botocore==1.19.26
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 Django==3.1.2
 django-cors-headers==3.5.0
+django-environ==0.4.5
+django-storages==1.10.1
 djangorestframework==3.12.1
 gunicorn==20.0.4
 idna==2.10
 isort==5.6.4
+jmespath==0.10.0
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 mypy-extensions==0.4.3
 pathspec==0.8.0
 Pillow==8.0.1
+pycodestyle==2.6.0
 pylint==2.6.0
 pylint-django==2.3.0
+pylint-plugin-utils==0.6
+python-dateutil==2.8.1
 pytz==2020.1
 regex==2020.10.28
 requests==2.24.0
+s3transfer==0.3.3
 six==1.15.0
 sqlparse==0.4.1
 toml==0.10.2
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
 urllib3==1.25.11
+uWSGI==2.0.19.1
 wrapt==1.12.1
