--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ matrix:
       before_install:
         - cd backend
       install:
+        - source ~/virtualenv/python3.7/bin/activate
         - pip install -r requirements.txt
       script:
         - python manage.py migrate --run-syncdb
