--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ matrix:
         - yarn install
       script:
         - ./node_modules/.bin/eslint src/
-        - cd .. && sonar-scanner
+        - cd ..
+        - sonar-scanner
 
     - language: python
       python: '3.7'
@@ -29,3 +30,5 @@ matrix:
       script:
         - python manage.py migrate --run-syncdb
         - pylint **/*.py --disable='shallWeGame.tests' --load-plugins pylint_django
+        - cd ..
+        - sonar-scanner
