--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ matrix:
         - yarn install
       script:
         - ./node_modules/.bin/eslint src/
+        - cd ..
+        - sonar-scanner
 
     - language: python
       python: '3.7'
